// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test AbstractQuickEdit.register should render build-in input component correct 1`] = `
<div
  className="quick-edit"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
/>
`;

exports[`test AbstractQuickEdit.register should render build-in input component in edit mode 1`] = `
<div
  className="quick-edit quick-edit-editing"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    key="true"
    onChange={[Function]}
  />
</div>
`;

exports[`test AbstractQuickEdit.register should render build-in input component in edit mode 2`] = `
<div
  className="quick-edit"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
/>
`;

exports[`test AbstractQuickEdit.register should render build-in input component in edit mode 3`] = `
<div
  className="quick-edit quick-edit-editing"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    key="true"
    onChange={[Function]}
  />
</div>
`;
